--- a/src/main/resources/assets/thekitchen/lang/en_us.json
+++ b/src/main/resources/assets/thekitchen/lang/en_us.json
@@ -1,5 +1,7 @@
 {
   "entity.thekitchen.mouse": "Mouse",
 
-  "item.thekitchen.mouse_spawn_egg": "Mouse Spawn Egg"
+  "item.thekitchen.mouse_spawn_egg": "Mouse Spawn Egg",
+
+  "item.thekitchen.cheese": "Cheese"
 }
