start breadcrumbs impl, refactor pinkie -> pinky

--- a/src/main/resources/assets/thekitchen/lang/en_us.json
+++ b/src/main/resources/assets/thekitchen/lang/en_us.json
@@ -2,8 +2,10 @@
   "itemGroup.thekitchen": "The Kitchen",
 
   "item.thekitchen.cheese": "Cheese",
+  "block.thekitchen.breadcrumbs": "Breadcrumbs",
 
   "item.thekitchen.mouse_spawn_egg": "Mouse Spawn Egg",
 
-  "entity.thekitchen.mouse": "Mouse"
+  "entity.thekitchen.mouse": "Mouse",
+  "entity.thekitchen.pinky": "Pinky"
 }
