--- a/src/main/resources/assets/thekitchen/lang/en_us.json
+++ b/src/main/resources/assets/thekitchen/lang/en_us.json
@@ -2,6 +2,8 @@
   "itemGroup.thekitchen": "The Kitchen",
 
   "item.thekitchen.cheese": "Cheese",
+  "item.thekitchen.citrus": "Citrus",
+
   "block.thekitchen.breadcrumbs": "Breadcrumbs",
 
   "item.thekitchen.mouse_spawn_egg": "Mouse Spawn Egg",
